syntax = "proto3";

package doc;

option go_package = "github.com/yb2020/odoc-proto/gen/go/doc";

import "definitions/doc/UserDocPublic.proto";

// ==========  创建文件夹请求  ==========
// url: /client/doc/addFolder
// method: post

message CreateUserDocFolderRequest {
  // 父文件夹ID，默认为0（根目录）
  string parentId = 1;
  
  // 文件夹名称，长度需要1-100个字符
  string name = 2;
  
  // 排序值，默认为0
  uint32 sort = 3;
  
  // 是否更改排序标志，默认为true
  bool changeSortFlag = 4;
  
  // 旧文件夹项目排序信息
  repeated doc.ChangeSortItem oldFolderItems = 5;
}

message CreateUserDocFolderResponse {
  // 文件夹ID
  string id = 1;
  
  // 文件夹名称
  string name = 2;
  
  // 文件夹备注
  string remark = 3;
}

// ==========  修改文件夹请求  ==========
// url: /client/doc/updateFolder
// method: post
message UpdateUserDocFolderReq {
  string folderId = 1;
  string name = 2;
  string remark = 3;
}

// ==========  删除文件夹请求  ==========
// url: /client/doc/deleteFolder
// method: post
message DeleteUserDocFolderReq {
  // 文件夹ID
  repeated string folderIds = 1;
}

// ==========  移动文件夹或者文献  ==========
// url: /client/doc/moveDocOrFolderToAnotherFolder
// method: post
message MoveDocOrFolderToAnotherFolderReq {
  repeated doc.MovedDocItem movedDocItems = 2;
  repeated string movedFolderIds = 3;
  bool isHierarchicallyMoveDoc = 4;
  string targetFolderId = 5;
}


// ==========  添加文献到文件夹  ==========
// url: /client/doc/attachDocToFolder
// method: post
message AttachUserDocFolderReq {
  string docId = 1;
  string folderId = 2;
}




